# check_focus

./: .#temp  .gitignore  Makefile  Makefile.am  Makefile.in  README  README.gpv  SETUP_4_AUTOMAKE.sh  bestfocus.c  categorise_focus.sh  cf_util.c  checkfocus.c  checkfocus.h  config.h.in  configure  configure.ac
doc/: bestfocus.man  categorise_focus.man  checkfocus.man
