bin_PROGRAMS            = checkfocus bestfocus
checkfocus_SOURCES      = checkfocus.c
bestfocus_SOURCES       = bestfocus.c
checkfocus_LDADD        = $(LIBOBJS)
bestfocus_LDADD         = $(LIBOBJS)
man1_MANS               = doc/checkfocus.man doc/bestfocus.man 
dist_man_MANS           = doc/checkfocus.man doc/bestfocus.man
bestfocus_CFLAGS        = -Wconversion -Wformat
checkfocus_CFLAGS       = -Wconversion -Wformat
